# Networking-Middleware

./: .gitignore  CMakeLists.txt
docs/: TODO.txt  message_bus_class_diagram.puml  message_factory_class_diagram.puml  performance_analysis_tuning_guide.txt
explore/: Makefile  condition_variable.cpp
include/: MessageFactory.hpp  Publisher.hpp  Subscriber.hpp
include/app/: ConcreteSubscriber.hpp  EcuCommon.hpp  EcuImpl.hpp  EcuSim.hpp  EngineSubscriber.hpp
include/interface/: Message.hpp  MessageFactory.hpp  MessageFactory_Old.hpp  PublisherSubscriber.hpp
include/middleware/: MessageBus.hpp
src/: main.cpp
src/app/: EngineSubscriber.cpp
